le agregue hola que tal en nueva lista

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <li>hamburguesa</li>
       <li>pan</li>
   </ul>
+  <ol>
+      <li>hol</li>
+      <Li>que tal</Li>
+      <li>como estas</li>
+  </ol>
 </body>
 </html>
